--- a/Application/Dockerfile
+++ b/Application/Dockerfile
@@ -11,10 +11,10 @@ COPY ["./Application.csproj", "Application/"]
 RUN dotnet restore "Application/Application.csproj"
 COPY . .
 WORKDIR "/src/Application"
-RUN dotnet build "Application.csproj" -c Release -o /app/build
+RUN dotnet build "Application/Application.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Application.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Application/Application.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
