--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,49 +1,59 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+# ASP.NET
+# Build and test ASP.NET projects.
+# Add steps that publish symbols, save build artifacts, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
 trigger:
 - master
 
-resources:
-- repo: self
+pool:
+  vmImage: 'ubuntu-latest'
 
 variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '4fe6778e-4639-4c3a-8a8a-0a44f156ddd3'
-  imageRepository: 'horizontoursite'
-  containerRegistry: 'horizontour.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Application/Dockerfile'
-  tag: '$(Build.BuildId)'
+  buildConfiguration: 'Release'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+steps:
+  - task: UseDotNet@2
+    displayName: 'Install .NET Core SDK'
+    continueOnError: false
+    inputs:
+      version: '7.x'
 
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+  - task: DotNetCoreCLI@2
+    displayName: 'Restore'
+    continueOnError: false
+    inputs:
+      command: restore
 
-    - task: AzureRmWebAppDeployment@4
-      inputs:
-        ConnectionType: 'AzureRM'
-        azureSubscription: 'Pago pelo Uso (cbb3358e-dd46-4cb3-afef-3aa600faa39a)'
-        appType: 'webAppContainer'
-        WebAppName: 'horizon-tour-site'
-        DockerNamespace: '$(containerRegistry)'
-        DockerRepository: '$(imageRepository)'
-        DockerImageTag: '$(tag)'
+  - task: DotNetCoreCLI@2
+    displayName: '.NET build $(buildConfiguration)'
+    continueOnError: false
+    inputs:
+      command: 'build'
+      projects: 'Application/Application.csproj'
+      arguments: '--configuration $(buildConfiguration)'
+      
+  - task: DotNetCoreCLI@2
+    displayName: 'Publish Artifacts'
+    continueOnError: false
+    inputs:
+      command: publish
+      projects: 'Application/Application.csproj'
+      publishWebProjects: True
+      arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+      zipAfterPublish: True
+
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(Build.ArtifactStagingDirectory)'
+      artifactName: 'HorizonSite'
+
+  # - task: AzureRmWebAppDeployment@4
+  #   continueOnError: false
+  #   displayName: 'Deploy to Azure'
+  #   inputs:
+  #     ConnectionType: 'AzureRM'
+  #     azureSubscription: 'Pago pelo Uso (cbb3358e-dd46-4cb3-afef-3aa600faa39a)'
+  #     appType: 'webAppLinux'
+  #     WebAppName: 'horizon-tour-api'
+  #     packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
