Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,9 @@ stages:
         tags: |
           $(tag)
 
-    - task: AzureRmWebAppDeployment@4
+    - task: AzureWebAppContainer@1
+      displayName: 'Azure Web App on Container Deploy'
       inputs:
-        ConnectionType: 'AzureRM'
         azureSubscription: 'Pago pelo Uso (cbb3358e-dd46-4cb3-afef-3aa600faa39a)'
-        appType: 'webAppContainer'
-        WebAppName: 'horizon-tour-site'
-        DockerNamespace: '$(dockerRegistryServiceConnection)'
-        DockerRepository: '$(imageRepository)'
-        DockerImageTag: '$(tag)'
+        appName: 'horizon-tour-site'
+        containers: '$(containerRegistry)/$(imageRepository):$(tag)'
